add create user API
